--- a/themes/hexo-theme-next/source/css/_variables/base.styl
+++ b/themes/hexo-theme-next/source/css/_variables/base.styl
@@ -23,6 +23,7 @@ $blue-bright  = #87daff
 $blue         = #0684bd
 $blue-deep    = #262a30
 $orange       = #fc6423
+$green        = #29c360
 
 
 
@@ -158,14 +159,14 @@ $code-background                = $gainsboro
 $btn-font-weight                = normal
 
 $btn-default-radius             = 0
-$btn-default-bg                 = $black-deep
+$btn-default-bg                 = $green
 $btn-default-color              = white
 $btn-default-font-size          = 14px
 $btn-default-border-width       = 2px
 $btn-default-border-color       = $black-deep
-$btn-default-hover-bg           = white
-$btn-default-hover-color        = $black-deep
-$btn-default-hover-border-color = $black-deep
+$btn-default-hover-bg           = $green
+$btn-default-hover-color        = $green
+$btn-default-hover-border-color = $green
 
 
 
