--- a/themes/hexo-theme-next/source/css/_variables/Pisces.styl
+++ b/themes/hexo-theme-next/source/css/_variables/Pisces.styl
@@ -61,10 +61,10 @@ $toc-link-active-current-border-color = $sidebar-highlight
 // Button
 $btn-default-radius           = 2px
 $btn-default-bg               = white
-$btn-default-color            = $text-color
-$btn-default-border-color     = $text-color
+$btn-default-color            = $green
+$btn-default-border-color     = $green
 $btn-default-hover-color      = white
-$btn-default-hover-bg         = $black-deep
+$btn-default-hover-bg         = $green
 
 // Full Image Tag
 $full-image-width             = 118%
